TestCases/ASTTests/SemanticErrorsTests/CreateTests/read_file_before.dot
digraph AST {
  "126604346428960" [label="Start"];
  "126604346428960" -> "126604346430352";
  "126604346430352" [label="Code"];
  "126604346430352" -> "126604346430784";
  "126604346430784" [label="Function"];
  "126604346430784" -> "126604346432896";
  "126604346430784" -> "126604346429152";
  "126604346432896" [label="main"];
  "126604346429152" [label="Code"];
  "126604346429152" -> "126604346434432";
  "126604346429152" -> "126604346433040";
  "126604346434432" [label="Declaration"];
  "126604346434432" -> "126604346431456";
  "126604346434432" -> "126604346432512";
  "126604346431456" [label="f"];
  "126604346432512" [label="0.5487"];
  "126604346433040" [label="Declaration"];
  "126604346433040" -> "126604346430640";
  "126604346433040" -> "126604346431360";
  "126604346430640" [label="f"];
  "126604346431360" [label="48471425.5487845145"];
}
